# cc-spinner

./: README.md  SPEC.md  demo.txt  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  entries.rs  mod.rs  profile.rs  settings.rs  switch.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai_generate.rs  mod.rs  profile.rs  spinner_config.rs
src/components/: AIGenerateDialog.tsx  EditorToolbar.tsx  EntryRow.tsx  EntryTable.tsx  MainContent.tsx  ProfileItem.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/lib/api/: ai.ts  profiles.ts  settings.ts
src/lib/i18n/: context.tsx  translations.ts
